--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ seaborn == 0.12.2
 protobuf == 3.19.0
 tqdm == 4.64.1
 opencv-python-headless == 4.5.5.64
+opencv-contrib-python == 3.4.23.17
 shapely == 1.8.2
 deep-sort-realtime == 1.3.1
 torch == 1.13.1
@@ -16,6 +17,4 @@ gunicorn == 20.1.0
 requests == 2.27.1
 IPython == 7.34.0
 psutil == 5.9.4
-ffmpeg
-libsm6
-libxext6
+ffmpeg == 1.4
